Adding tuning for data